@@ -1028,19 +1028,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-while|while
-condition|(
-literal|true
-condition|)
-try|try
-block|{
-name|FSDataOutputStream
-name|s
+name|Path
+name|versionFile
 init|=
-name|fs
-operator|.
-name|create
-argument_list|(
 operator|new
 name|Path
 argument_list|(
@@ -1050,6 +1040,22 @@ name|HConstants
 operator|.
 name|VERSION_FILE_NAME
 argument_list|)
+decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+try|try
+block|{
+name|FSDataOutputStream
+name|s
+init|=
+name|fs
+operator|.
+name|create
+argument_list|(
+name|versionFile
 argument_list|)
 decl_stmt|;
 name|s
@@ -1058,11 +1064,6 @@ name|writeUTF
 argument_list|(
 name|version
 argument_list|)
-expr_stmt|;
-name|s
-operator|.
-name|close
-argument_list|()
 expr_stmt|;
 name|LOG
 operator|.
@@ -1079,6 +1080,11 @@ literal|" set its version at:"
 operator|+
 name|version
 argument_list|)
+expr_stmt|;
+name|s
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 return|return;
 block|}
@@ -1108,12 +1114,19 @@ argument_list|()
 operator|+
 literal|", retrying: "
 operator|+
-name|StringUtils
-operator|.
-name|stringifyException
-argument_list|(
 name|e
+operator|.
+name|getMessage
+argument_list|()
 argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|delete
+argument_list|(
+name|versionFile
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 try|try
@@ -1135,12 +1148,6 @@ block|{
 comment|// ignore
 block|}
 block|}
-else|else
-block|{
-comment|// rethrow
-throw|throw
-name|e
-throw|;
 block|}
 block|}
 block|}
