@@ -79,6 +79,7 @@ Release 0.91.0 - Unreleased
    HBASE-3781  hbase shell cannot start "NoMethodError: undefined method
                `close' for nil:NilClass" (Mikael Sitruk)
    HBASE-3802  Redundant list creation in HRegion
+   HBASE-3800  HMaster is not able to start due to AlreadyCreatedException
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
